<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/titulo"
        android:textSize="30dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvTitulo">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
            >

                    <ImageView
                        android:id="@+id/ivLocation1"
                        android:layout_width="400dp"
                        android:layout_height="200dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/cuzco"
                        android:onClick="irMapaCuzco"
                    />

                    <TextView
                        android:id="@+id/tvLocation1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_location_1"
                        android:layout_gravity="center_horizontal"
                        android:textSize="20dp"
                        />

                <ImageView
                    android:id="@+id/ivLocation2"
                    android:layout_width="400dp"
                    android:layout_height="200dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/arequipa"
                    android:onClick="irMapaArequipa"
                    />

                <TextView
                    android:id="@+id/tvLocation2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_location_2"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20dp"
                    />


                <ImageView
                    android:id="@+id/ivLocation3"
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ancash"
                    android:onClick="irMapaAncash"
                    />

                <TextView
                    android:id="@+id/tvLocation3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_location_3"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20dp"
                    />

                <ImageView
                    android:id="@+id/ivLocation4"
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ica"
                    android:onClick="irMapaIca"
                    />

                <TextView
                    android:id="@+id/tvLocation4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_location_4"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20dp"
                    />


            </LinearLayout>
    </ScrollView>
</RelativeLayout>